2007-12-09 Benny Malengier <benny.malengier@gramps-project.org>
	* src/gen/db/dbdir.py: always use db.DB_RECOVER

2007-12-09 Benny Malengier <benny.malengier@gramps-project.org>
	* src/plugins/NarrativeWeb.py: Use Narrated word

2007-12-09  Alex Roitman  <shura@gramps-project.org>
	* data/grampsxml.rng: Add namemaps and mediapath.
	* data/grampsxml.dtd: Add namemaps and mediapath.

2007-12-09 Benny Malengier <benny.malengier@gramps-project.org>
	* src/Selectors/_SelectRepository.py: handle column changed, bug #1427

2007-12-09  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/CalculateEstimatedDates.py: define set_title
	* src/plugins/OwnerEditor.py: define build_menu_names
	* src/PluginUtils/_PluginWindows.py: Fixed layer window issues

2007-12-09 Benny Malengier <benny.malengier@gramps-project.org>
	* src/gen/db/dbdir.py: rebuild ref map correctly, bug #1421

2007-12-09 Benny Malengier <benny.malengier@gramps-project.org>
	Add support for name grouping import/export
	* src/GrampsDb/_GrampsDbWriteXML.py: write group table out
	* src/GrampsDb/_GrampsBSDDB.py: group table is no sec table, init it
		together with primary tables!
	* src/gen/db/base.py: obtain grouping keys
	* src/gen/db/dbdir.py: group table is no sec table, init it
		together with primary tables!
	* src/gen/utils/dbutils.py: grdb -> grdb copy of grouping table, 
		copy mediapath.
	* src/gen/proxy/proxybase.py: obtain grouping keys, add missing
		bookmark methods
	* src/gen/proxy/dbbase.py: add obtain grouping keys method
	* src/GrampsDbUtils/_ReadXML.py: read in group table
	* src/plugins/ReadGrdb.py: read in group table

2007-12-07  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/PluginUtils/Makefile.am: Missing _PluginsWindows.py
	* po/test: new unittest dir
	* po/test/po_test.py: new unittest suite for POTFILES
	  and Makefiles
	* po/POTFILES.in: Missing CalculateEstimatedDates.py

2007-12-06  Douglas S. Blank  <dblank@cs.brynmawr.edu>