@@ -1,3 +1,7 @@
+2007-12-09  Douglas S. Blank  <dblank@cs.brynmawr.edu>
+	* src/GrampsCfg.py: Rearranged name display preference settings
+	* src/BasicUtils/_NameDisplay.py: allow title-case name patterns
+
 2007-12-09 Benny Malengier <benny.malengier@gramps-project.org>
 	* src/gen/db/dbdir.py: always use db.DB_RECOVER
 
